--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="stylesheet" href="main.css">
+    <script src="js/components/ApartmentCardComponent.js" defer></script>
+    <script src="js/components/ApartmentGridComponent.js" defer></script>
     <script src="js/API.js" defer></script>
+    <script src="js/main.js" defer></script>
     <title>DOM/CRUD exam</title>
 </head>
 
